--- a/css/styles.css
+++ b/css/styles.css
@@ -1,331 +1,35 @@
-body{
-    font-family: 'Raleway', sans-serif !important;
-    font-size: 16px;
-}
-h1{
-    font-family: 'Calibri', sans-serif !important;
-}
-@media only screen and (min-width: 768px) {
-
-body {
-    overflow-x: hidden;
-    margin:0;
-    font-family: 'Raleway', sans-serif;
-    font-size: 16px;
-}
-iframe{
-    text-align:center;
-}
-.body-container {
-  padding-left: 250px;
-}
-
 img {
     width: 100%;
-    height: auto;
+    height: 645px;
 }
 
-iframe{
-    width:400px;
-    height:400px;
-    border: 0px;
+#info {
+    margin: 11%;
+    margin-top: 3%;
 }
 
-.med-image{
-    width:80%;
-    margin:auto;
+.open ul.dropdown-menu {
+    display: block;
 }
-
-.sidebar {
-  z-index:10;
-  position: fixed;
-  left: 250px;
-  width: 0;
-  height: 100%;
-  margin-left: -250px;
-  overflow-y: auto;
-  background: #000;
+#professionalBtn{
+    width:33.32%;
+    float: left;
+    border-right:1px solid;
+    border-right-color:black;
 }
-
-.container-fluid{
-  z-index:1;
-  width: 100%;
-  padding: 15px;
-  padding-top: 0px;
-  font-style:normal;
-  letter-spacing:normal;
-  color:rgb(70,70,70);
-  font-family:helvetica 12;
+#disciplinaryBtn{
+    width:33.32%;
+    float:left;
+    border-right:1px solid;
+    border-right-color:black;
 }
-h2,h3,h4{
-    font-family: 'Calibri', sans-serif !important;
-    color:black
+#contentBtn{
+    width:33.32%;
+    float:left
 }
-.active {
-    background-color: grey;
+#sample h5{
+    padding-top:0px;
 }
-/* Footer Styles */
-.paragraph-padding{
-    padding-top:20px;
-    padding-bottom:20px
+td p{
+    padding:3px
 }
-
-.foot{
-    text-decoration: none;
-    padding-bottom:0;
-    padding-top:0;
-}
-.center-align{
-    text-align:center
-}
-/* Sidebar Styles */
-
-.navbar-nav {
-  position: absolute;
-  top: 0;
-  width: 250px;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  font-family: 'Calibri', sans-serif !important;
-
-}
-
-.navbar-nav li {
-  text-indent: 20px;
-  line-height: 40px;
-}
-
-.navbar-nav li a {
-  display: block;
-  text-decoration: none;
-  color: rgb(255,255,255);
-}
-.effect-list{
-}
-.navbar-nav li a:hover {
-  background: rgba(250, 250, 250, 0.2);
-}
-
-.navbar-nav li a:active, .navbar-nav li a:focus {
-  text-decoration: none;
-}
-
-.navbar-nav>.sidebar-main {
-  height: 65px;
-  font-size: 18px;
-  line-height: 60px;
-}
-
-.body-container .sidebar {
-width: 250px;
-}
-
-.body-container #page-content-wrapper {
-position: relative;
-margin-right: 0;
-}
-
-table {
-    text-align:center;
-    margin:auto;
-}
-
-.footer-list li{
-    list-style: none;
-    display: inline;
-    text-align:center;
-    padding:20px;
-}
-#global-warming{
-    padding-top:15px;
-    background-color:  rgba(200, 200, 200, 0.2);
-}
-#global-causes{
-    background-color:  rgba(200, 200, 200, 0.2);
-}
-    .col-12{
-        padding-right:0px;
-    }
-    img{
-        padding:15px;
-    }
-}
-@media only screen and (max-width: 768px) {
-    /* For mobile phones: */
-    body {
-        overflow-x: hidden;
-        margin:0;
-    }
-    h1{
-        font-family: 'Calibri', sans-serif !important;
-        font-size: 1.5em;
-    }
-    p{
-        line-height:1.2em;
-    }
-    iframe{
-        text-align:center;
-    }
-    .navbar-nav li a:hover {
-        background: rgba(250, 250, 250, 0.2);
-    }
-
-    .navbar-nav li a:active, .navbar-nav li a:focus {
-      text-decoration: none;
-    }
-    .navbar-nav li {
-        display:inline;  
-        text-decoration: none;
-    }
-    .sidebar {
-        position:fixed;
-        z-index:900;
-        width:100%;
-        top:0;
-        text-align:justify !important;
-        background-color: black;
-        justify-content:space-around;
-    }
-    .sidebar-main a {
-        text-decoration: none;
-        font-size:1.25em;
-    }
-    .navbar-nav>.sidebar-main {
-        height: 100px;
-        font-size: 18px;
-        line-height: 1.5em;
-    }
-    .navbar-nav {
-      margin: 0;
-      padding: 0;
-      padding-top:1.01em;
-      display:inline !important;
-      list-style: none;
-      font-family: 'Calibri', sans-serif !important;
-
-    }
-
-    .navbar-nav li {
-      text-indent: 20px;
-      line-height: 40px;
-    }
-
-    .navbar-nav li a {
-      text-decoration: none;
-      color:white;
-    }
-    table {
-    text-align:center;
-        margin:auto;
-    }
-    .container-fluid{
-        z-index:0;
-        margin-top:75px;
-        margin-left:5%;
-        margin-right: 5%;
-    }
-    
-    .navbar-nav{
-        width:100%;
-        margin-left:5%;
-        margin-right:5%;
-        text-align:justify;
-        overflow:hidden;
-    }
-    .footer-list li{
-    list-style: none;
-    display: inline;
-    text-align:center;
-    padding:20px;
-}
-    .med-image{
-        width:500px;
-        margin:0;
-    }
-    .med-image img{
-        width:100%;
-        height:auto;
-    }
-    #main-content{
-        padding-top:0px;
-        margin-top:-30px;
-    }
-    h3{
-        font-family: 'Calibri', sans-serif !important;
-
-    }
-    .center-align{
-    text-align:center
-}
-}
-
-
-@media only screen and (max-width: 600px) and (min-width:375px){
-
-    .navbar-nav{
-        padding:0px;
-        font-family: 'Calibri', sans-serif !important;
-    }
-    .sidebar{
-        z-index:999;
-        display:inline;
-        margin-top:0px;
-    }
-    .med-image{
-        width:300px;
-        margin:0;
-    }
-    .med-image img{
-        width:100%;
-        height:auto;
-    }
-    h3{
-        font-size:1em;
-    }
-    p{
-        font-size:.9em;
-    }
-    iframe{
-    width:300px;
-    height:300px;
-    border: 0px;
-}
-    dd{
-        line-height:1.25em;
-    }
-    dt{
-        line-height:1.75em;
-    }
-    .navbar-nav li a{
-        font-size:.70em;
-    }
-    .container-fluid{
-        z-index:1;
-        margin-top:55px;
-        margin-left:5%;
-        margin-right: 5%;
-    }
-    .footer-list li{
-        list-style: none;
-        display: inline;
-        text-align:center;
-        padding:5px;
-    }
-    .footer-list{
-        padding:0px;
-    }
-    table td{
-        padding:5px;
-    }
-    .container-fluid h1{
-        font-family: 'Calibri', sans-serif !important;
-        font-size:1.5rem;
-    }
-    .container-fluid h3{
-        font-family: 'Calibri', sans-serif !important;
-
-        font-size:1.25rem;
-    }
-}
-
