--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,104 @@
+.str {
+    list-style: none;
+    position: relative;
+}
+
+.str:before {
+    content: "*";
+    position: absolute;
+    color: red;
+    font-size: 30px;
+    left: -18px;
+    bottom: -1px;
+}
+
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 10px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+@media (max-width:801px)  {
+    
+    input[type=text], select {
+        width: 100%;
+        padding: 12px 20px;
+        margin: 10px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+    }
+
+    #professionalCoreDesktop, #professionalElecDesktop, #disciplinaryDesktop, #contentareaDesktop {
+        display: none ;
+    }
+    #mobile-buttons{
+        width:50%;
+        margin-left:auto;
+        margin-right:auto;
+        padding-top:1%;
+    }
+    hr{
+        display:none;
+    }
+    #buttons{
+        
+        display:none;
+    }
+    #info{
+        margin-top:15% !important;
+    }
+    #professionalCoreMobile, #professionalElecMobile, #disciplinaryMobile, #contentareaMobile {
+        display: block !important;
+    }
+}
+@media (max-width:600px)  { 
+     #mobile-buttons{
+        width:50%;
+        margin-left:auto;
+        margin-right:auto;
+        margin-top:5%;
+    }
+    hr{
+        display:none;
+    }
+    #info{
+        margin-top:20% !important;
+    }
+    #buttons{
+        display:none !important;
+    }
+    #professionalCoreDesktop, #professionalElecDesktop, #disciplinaryDesktop, #contentareaDesktop {
+        display: none !important;
+    }
+    
+}
+@media (max-width:515px)  { 
+    #professionalCoreDesktop, #professionalElecDesktop, #disciplinaryDesktop, #contentareaDesktop {
+        display: none !important;
+    }
+    #mobile-buttons{
+        width:50%;
+        margin-left:auto;
+        margin-right:auto;
+        margin-top:7%;
+    }
+    hr{
+        display:none;
+    }
+    #buttons{
+        display:none;
+    }
+    #info{
+        margin-top:25% !important;
+    }
+    
+}
+
 img {
     width: 100%;
     height: 645px;
@@ -12,24 +113,68 @@ img {
     display: block;
 }
 #professionalBtn{
-    width:33.32%;
+    width:33.33%;
     float: left;
     border-right:1px solid;
     border-right-color:black;
+    display:inline;
+    background-color:black;
+    
 }
 #disciplinaryBtn{
-    width:33.32%;
+    width:33.33%;
     float:left;
     border-right:1px solid;
     border-right-color:black;
+        background-color:black;
+
 }
 #contentBtn{
     width:33.32%;
-    float:left
+    float:left;
+        background-color:black;
+
 }
 #sample h5{
     padding-top:0px;
 }
 td p{
-    padding:3px
+    padding:3px;
+    width:100%;
+    height:100%;
+    line-height:1.6 !important;
 }
+#buttons{
+    margin-top:10%;
+}
+
+p{
+    color:black;
+    font-size:1vw;
+}
+.course-title{
+    color:darkred
+}
+#sample{
+    width:85%;
+    margin: auto;
+}
+tr p {
+    letter-spacing:0;
+    line-height: 3;
+    font-size:1em;
+    padding:3px
+    
+}
+.course-description{
+    box-shadow: inset 10px 0px 0px 0px darkred, inset 0px -11px 17px -15px darkgrey, inset 0px 11px 8px -15px #CCC;;
+}
+.fixed{
+    position:sticky;
+}
+.unfixed{
+    position:inherit;
+}
+    #professionalCoreMobile, #professionalElecMobile, #disciplinaryMobile, #contentareaMobile {
+        display: none;
+    }
